<?xml version="1.0" encoding="utf-8"?>
<resources>
<string name="hello">Hello World, TracDroid!</string>
<string name="app_name">TracDroid</string>

<string name="app_dec">Manage a Trac bugtracker instance</string>
<string-array name="prefTracServerLabels"><item>Create a new one</item>
</string-array>
<string-array name="prefTracServerValues"><item>new</item>
</string-array>
<string name="click_to_edit">Click to edit</string>
<string name="_hours">%s hours</string>
<string name="_days">%s days</string>
<string name="_weeks">%s weeks</string>
<string name="_months">%s months</string>
<string name="_years">%s years</string>

<string name="loading_ticket">Loading ticket</string>
<string name="reported_by_on" formatted="false">reported by %s\n%s</string>
<string name="owned_by">owned by %s</string>
<string name="status_is">status : %s</string>
<string name="updating_ticket">Updating ticket</string>
<string name="ticket_updated">Ticket updated</string>
<string name="nothing_changed">Nothing changed</string>
<string name="to">to</string>
<string name="tickects_changes_since">Tickets changes since %s</string>
<string name="loading_changes">Loading changes</string>
<string name="loading_changes_since">Loading changes since %s</string>
<string name="no_changes_ask_load_more">No ticket changes since %s\nload until most recent changes ?</string>
<string name="load_one_day_back">Load one day back</string>
<string name="wiki_page_edited">Wiki page &quot;%s&quot; edited</string>
<string name="oops">Oups, something goes wrong</string>
<string name="ok">OK</string><string name="cancel">Cancel</string>
<string name="_by" formatted="false">#%s by %s</string>
<string name="loading_wiki_page">Loading wiki page</string>
<string name="ticket_title">Ticket summary</string>
<string name="ticket_desc_edit">Enter description</string>
<string name="actions">Actions</string>

<string name="ticket_desc">Description</string>
<string name="changelog">Changelog</string>
<string name="no_network">No network</string>
<string name="create_ticket">Create new ticket</string>
<string name="ticket_created">Ticket created</string>
<string name="toolbar_search">search..</string>
<string name="create_milestone">Create new milestone</string>
<string name="take_photo">Add screenshot</string>
<string name="shoot_the_bug">Shoot the bug !</string>
<string name="mark_the_bug">Mark the bug</string>
<string name="finish">Finish</string>
<string name="reshoot">Reshoot</string>
<string name="take_file">Attach a file</string>

<string name="not_owned">not owned</string>




<string name="as">as</string>
<string name="_less_than_one_minute_ago">less than 1 minute ago</string>
<string name="_in_less_than_one_minute">in less than 1 minute</string>
<string name="_seconds_ago">%s seconds ago</string>
<string name="_minutes_ago">%s minutes ago</string>
<string name="_hours_ago">%s hours ago</string>
<string name="_days_ago">%s days ago</string>
<string name="_weeks_ago">%s weeks ago</string>
<string name="_months_ago">%s months ago</string>
<string name="_years_ago">%s years ago</string>
<string name="_in_seconds">in %s seconds</string>
<string name="_in_minutes">in %s minutes</string>
<string name="_in_hours">in %s hours</string>
<string name="_in_days">in %s days</string>
<string name="_in_weeks">in %s weeks</string>
<string name="_in_months">in %s months</string>
<string name="_in_years">in %s years</string>
<string name="set_new_type">Set the new type</string>

<string name="ask_comment">Any comment ?</string>
<string name="ticket_type">Type</string>
<string name="ticket_component">Component</string>
<string name="ticket_milestone">Milestone</string>
<string name="ticket_priority">Priority</string>

<string name="tab_wiki">Wiki</string>
<string name="tab_roadmaps">Roadmaps</string>
<string name="tab_tickets">Tickets</string>

<string name="ticket_modified">Ticket modified\nCommit to save changes</string>
<string name="loading_search_results">Loading search results</string>
<string name="by_status">By status</string>
<string name="by_owner">By owner</string>
<string name="by_type">By type</string>
<string name="by_component">By component</string>

<string name="all_tickets">All tickets</string>
<string name="ticket_search_results">Ticket search results</string>
<string name="ticket_number">Ticket #%s</string>
<string name="ticket_changes_recent">Recent ticket changes</string>
<string name="milestones">Milestones</string>
<string name="search_trac">Search Trac</string>
<string name="no_attachment">No attachment</string>
</resources>
