<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  android:orientation="vertical" 
			  android:layout_width="fill_parent"
			  android:layout_height="fill_parent" 
			  android:id="@+id/layout">

	<TextView android:id="@+id/preview_title" 
			android:layout_width="fill_parent"
	   android:layout_height="wrap_content" 
	   android:textSize="24sp" />
	   
	<FrameLayout android:id="@+id/preview"
	  android:layout_weight="1" android:layout_width="fill_parent"
	  android:layout_height="fill_parent">
	</FrameLayout>
	
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
				  android:orientation="horizontal"
				  android:layout_width="fill_parent"
				  android:layout_height="wrap_content" 
				  android:id="@+id/layoutButtons">
		
		<Button android:layout_width="wrap_content"
		  android:layout_height="wrap_content" android:id="@+id/buttonClick"
		  android:text="@string/shoot_the_bug" android:layout_gravity="center" />
	
		<Button android:layout_width="wrap_content"
		  android:layout_height="wrap_content" android:id="@+id/buttonReshoot"
		  android:text="@string/reshoot" android:layout_gravity="center"
		  android:visibility="gone" />
		  
		<Button android:layout_width="wrap_content"
		  android:layout_height="wrap_content" android:id="@+id/buttonFinish"
		  android:text="@string/finish" android:layout_gravity="center" />
		  
	</LinearLayout>

</LinearLayout>
